--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ListCountriesActivity">
+        <activity android:name=".listcountries.ListCountriesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
